# Custom-Neural-network

./: CMakeLists.txt  README.md  main.cpp
XORNeural network/: AKML.hpp  AKML_consts.hpp  CMakeLists.txt  GeneticAlgorithm.cpp  GeneticAlgorithm.hpp  Matrices.hpp  Matrix.cpp  Matrix.hpp  MatrixOperations.hpp  NeuralFunctions.cpp  NeuralFunctions.hpp  NeuralLayer.cpp  NeuralLayer.hpp  NeuralNetwork 2.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  UtilityLoops.hpp  main.cpp
XORNeural network.xcodeproj/: project.pbxproj
XORNeural network.xcodeproj/xcuserdata/aldric-l.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
XORNeural network.xcodeproj/xcuserdata/aldric-l.xcuserdatad/xcschemes/: xcschememanagement.plist
XORNeural network/AgentBasedUtilities/: CMakeLists.txt  CSV_Saver.hpp  Save.hpp
XORNeural network/ML_Examples/: NaiveMazeQSolver.cpp
XORNeural network/Matrices/: DynamicMatrix.hpp  Matrix.hpp  MatrixInterface.hpp  MatrixOperations.hpp  StaticMatrix.hpp
v0.1/Matrices/: DynamicMatrix.hpp  Matrix.hpp  MatrixOperations.hpp
v0.2/: .gitignore  GeneticAlgorithm.hpp  Makefile  NeuralFunctions.cpp  NeuralFunctions.hpp  NeuralLayer.hpp  NeuralNetwork.hpp
v0.2/Matrices/: DynamicMatrix.hpp  Matrix.hpp  MatrixInterface.hpp  MatrixOperations.hpp  StaticMatrix.hpp
